Fixed #28991 -- Added new BlankFieldListFilter admin filter.

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ basepython = python3
 usedevelop = false
 deps = flake8
 changedir = {toxinidir}
-commands = flake8 .
+commands = flake8 django tests
 
 [testenv:docs]
 basepython = python3
