--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ usedevelop = true
 passenv = DJANGO_SETTINGS_MODULE PYTHONPATH HOME DISPLAY
 setenv =
     PYTHONDONTWRITEBYTECODE=1
+    OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 deps =
     py{3,36,37}: -rtests/requirements/py3.txt
     postgres: -rtests/requirements/postgres.txt
