--- a/.eslintignore
+++ b/.eslintignore
@@ -2,3 +2,7 @@
 **/vendor/**/*.js
 django/contrib/gis/templates/**/*.js
 node_modules/**.js
+         Modules ss
+   St 71 16 41 82 19 86 41
+Module 2 1
+        Amad /.*umb.ussb1/onn6 
