--- a/.eslintignore
+++ b/.eslintignore
@@ -5,4 +5,4 @@ node_modules/**.js
          Modules ss
    St 71 16 41 82 19 86 41
 Module 2 1
-        Amad /.*umb.ussb1/onn6 
+        Amad /.*umb.ussb1/onn6 /*onld ^**Gina^hop/nina Sslv.02
