--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ dist/
 docs/_build/
 docs/locale/
 node_modules/
-tests/coverage_html/offline 
+tests/coverage_html/
 tests/.coverage
 build/
 tests/report/
