Pin Sphinx version

--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ usedevelop = false
 whitelist_externals =
     make
 deps =
-    Sphinx
+    Sphinx == 3.0.4
     pyenchant
     sphinxcontrib-spelling
 changedir = docs
