Initial attempt to remove pytz

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,8 @@ include_package_data = true
 zip_safe = false
 install_requires =
     asgiref >= 3.2
-    pytz
+    pytz_deprecation_shim
+    tzdata >= 2020.1
     sqlparse >= 0.2.2
 
 [options.entry_points]
