Update setup.cfg for Twitter URL
Reference: https://github.com/pypa/warehouse/blob/e8adbd567dd5b512652ed94280eae683e5aa24fc/warehouse/templates/packaging/detail.html#L46

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ project_urls =
     Funding = https://www.djangoproject.com/fundraising/
     Source = https://github.com/django/django
     Tracker = https://code.djangoproject.com/
+    Twitter = https://twitter.com/djangoproject
 
 [options]
 python_requires = >=3.6
