--- a/.github/workflows/coverage-comment.yml
+++ b/.github/workflows/coverage-comment.yml
@@ -1,31 +1,28 @@
-name: Coverage
+name: Coverage Comment
 
 on:
-  pull_request_target:
-    paths:
-      - 'django/**/*.py'
-      - 'tests/**/*.py'
-    branches:
-      - main
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  workflow_run:
+    workflows: ["Coverage Tests"]
+    types:
+      - completed
 
 permissions:
   contents: read
   pull-requests: write
 
 jobs:
-  diff-coverage:
-    if: github.repository == 'django/django'
-    name: Diff Coverage (Windows)
+  comment:
+    if: >
+      github.event.workflow_run.event == 'pull_request' &&
+      github.event.workflow_run.conclusion == 'success' &&
+      github.repository == 'django/django'
+    name: Post Coverage Comment
     runs-on: windows-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository  
         uses: actions/checkout@v5
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.event.workflow_run.head_sha }}
           fetch-depth: 0
           persist-credentials: false
 
@@ -33,60 +30,61 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: '3.14'
-          cache: 'pip'
-          cache-dependency-path: 'tests/requirements/py3.txt'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip wheel
-          python -m pip install -r tests/requirements/py3.txt -e .
-          python -m pip install 'coverage[toml]' diff-cover
+      - name: Install diff-cover
+        run: pip install diff-cover
 
-      - name: Run tests with coverage
-        env:
-          PYTHONPATH: ${{ github.workspace }}/tests
-          COVERAGE_PROCESS_START: ${{ github.workspace }}/tests/.coveragerc
-          RUNTESTS_DIR: ${{ github.workspace }}/tests
-        run: |
-          python -Wall tests/runtests.py -v2
+      - name: Download coverage data
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-data-${{ github.event.workflow_run.pull_requests[0].number }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          run-id: ${{ github.event.workflow_run.id }}
 
-      - name: Generate coverage report
-        if: success()
-        env:
-          COVERAGE_RCFILE: ${{ github.workspace }}/tests/.coveragerc
-          RUNTESTS_DIR: ${{ github.workspace }}/tests
+      - name: Download PR number
+        uses: actions/download-artifact@v4
+        with:
+          name: pr-number-${{ github.event.workflow_run.pull_requests[0].number }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          run-id: ${{ github.event.workflow_run.id }}
+
+      - name: Read PR number
+        id: pr-metadata
         run: |
-          python -m coverage combine
-          python -m coverage report --show-missing
-          python -m coverage xml -o tests/coverage.xml
+          $pr_number = Get-Content pr_number.txt
+          echo "pr_number=$pr_number" >> $env:GITHUB_OUTPUT
 
       - name: Run diff-cover
         if: success()
         run: |
-          if (Test-Path 'tests/coverage.xml') {
-            diff-cover tests/coverage.xml --compare-branch=origin/main --fail-under=0 > tests/diff-cover-report.md
+          if (Test-Path 'coverage.xml') {
+            diff-cover coverage.xml --compare-branch=origin/main --fail-under=0 > diff-cover-report.md
           } else {
-            Set-Content -Path tests/diff-cover-report.md -Value 'No coverage.xml found; skipping diff-cover.'
+            Set-Content -Path diff-cover-report.md -Value 'No coverage.xml found; skipping diff-cover.'
           }
 
       - name: Post/update PR comment
-        if: success()
+        env:
+          PR_NUMBER: ${{ steps.pr-metadata.outputs.pr_number }}
         uses: actions/github-script@v8
         with:
           script: |
             const fs = require('fs');
-            const reportPath = 'tests/diff-cover-report.md';
+            const reportPath = 'diff-cover-report.md';
             let body = 'No coverage data available.';
             if (fs.existsSync(reportPath)) {
               body = fs.readFileSync(reportPath, 'utf8');
             }
             const commentBody = '### 📊 Coverage Report for Changed Files\n\n```\n' + body + '\n```\n\n**Note:** Missing lines are warnings only. Some lines may not be covered by SQLite tests as they are database-specific.\n\nFor more information about code coverage on pull requests, see the [contributing documentation](https://docs.djangoproject.com/en/dev/internals/contributing/writing-code/unit-tests/#code-coverage-on-pull-requests).';
 
+            const prNumber = parseInt(process.env.PR_NUMBER);
+            
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
+              issue_number: prNumber,
             });
+            
             for (const c of comments) {
               if ((c.body || '').includes('📊 Coverage Report for Changed Files')) {
                 await github.rest.issues.deleteComment({
@@ -100,6 +98,7 @@ jobs:
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
+              issue_number: prNumber,
               body: commentBody,
             });
+            
