[6.0.x] Added timeout-minutes directive to all GitHub Actions workflows.
GitHub Actions defaults to a 360-minute (6-hour) timeout. We've had jobs
hang due to issues in the parallel test runner, causing them to run for
the full 6 hours. This wastes resources and negatively impacts CI
availability, so explicit timeouts have been added to prevent
long-running hangs.

Backport of e48527f91d341c85a652499a5baaf725d36ae54f from main.

--- a/.github/workflows/schedule_tests.yml
+++ b/.github/workflows/schedule_tests.yml
@@ -20,6 +20,7 @@ jobs:
           - '3.13'
           - '3.14'
     name: Windows, SQLite, Python ${{ matrix.python-version }}
+    timeout-minutes: 60
     continue-on-error: true
     steps:
       - name: Checkout
@@ -41,6 +42,7 @@ jobs:
   pyc-only:
     runs-on: ubuntu-latest
     name: Byte-compiled Django with no source files (only .pyc files)
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -69,6 +71,7 @@ jobs:
   javascript-tests:
     runs-on: ubuntu-latest
     name: JavaScript tests
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -86,6 +89,7 @@ jobs:
   selenium-sqlite:
     runs-on: ubuntu-latest
     name: Selenium tests, SQLite
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -110,6 +114,7 @@ jobs:
   selenium-postgresql:
     runs-on: ubuntu-latest
     name: Selenium tests, PostgreSQL
+    timeout-minutes: 60
     services:
       postgres:
         image: postgres:14-alpine
@@ -155,6 +160,7 @@ jobs:
         server_side_bindings: [0, 1]
     runs-on: ubuntu-latest
     name: PostgreSQL Versions
+    timeout-minutes: 60
     env:
       SERVER_SIDE_BINDING: ${{ matrix.server_side_bindings }}
     services:
