--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,7 @@ jobs:
   docs:
     runs-on: ubuntu-24.04
     name: spelling
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -43,6 +44,7 @@ jobs:
   blacken-docs:
     runs-on: ubuntu-latest
     name: blacken-docs
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -66,6 +68,7 @@ jobs:
   lint-docs:
     runs-on: ubuntu-latest
     name: lint-docs
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
