--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -21,6 +21,7 @@ jobs:
   flake8:
     name: flake8
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -40,6 +41,7 @@ jobs:
 
   isort:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -59,6 +61,7 @@ jobs:
 
   black:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -69,6 +72,7 @@ jobs:
 
   zizmor:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
