--- a/.github/workflows/new_contributor_pr.yml
+++ b/.github/workflows/new_contributor_pr.yml
@@ -15,6 +15,7 @@ jobs:
     if: github.repository == 'django/django'
     name: Hello new contributor
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       # Pin to v1: https://github.com/actions/first-interaction/issues/369
       - uses: actions/first-interaction@v1
