--- a/.github/workflows/postgis.yml
+++ b/.github/workflows/postgis.yml
@@ -36,6 +36,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
