Added timeout-minutes directive to all GitHub Actions workflows.
GitHub Actions defaults to a 360-minute (6-hour) timeout. We've had jobs
hang due to issues in the parallel test runner, causing them to run for
the full 6 hours. This wastes resources and negatively impacts CI
availability, so explicit timeouts have been added to prevent
long-running hangs.

--- a/.github/workflows/schedule_tests.yml
+++ b/.github/workflows/schedule_tests.yml
@@ -21,6 +21,7 @@ jobs:
           - '3.14'
           - '3.15-dev'
     name: Windows, SQLite, Python ${{ matrix.python-version }}
+    timeout-minutes: 60
     continue-on-error: true
     steps:
       - name: Checkout
@@ -42,6 +43,7 @@ jobs:
   pyc-only:
     runs-on: ubuntu-latest
     name: Byte-compiled Django with no source files (only .pyc files)
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -70,6 +72,7 @@ jobs:
   javascript-tests:
     runs-on: ubuntu-latest
     name: JavaScript tests
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -87,6 +90,7 @@ jobs:
   selenium-sqlite:
     runs-on: ubuntu-latest
     name: Selenium tests, SQLite
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -111,6 +115,7 @@ jobs:
   selenium-postgresql:
     runs-on: ubuntu-latest
     name: Selenium tests, PostgreSQL
+    timeout-minutes: 60
     services:
       postgres:
         image: postgres:15-alpine
@@ -156,6 +161,7 @@ jobs:
         server_side_bindings: [0, 1]
     runs-on: ubuntu-latest
     name: PostgreSQL Versions
+    timeout-minutes: 60
     env:
       SERVER_SIDE_BINDING: ${{ matrix.server_side_bindings }}
     services:
