[6.0.x] Bumped version for 6.0 release.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ readme = "README.rst"
 license = "BSD-3-Clause"
 license-files = ["LICENSE", "LICENSE.python"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Environment :: Web Environment",
     "Framework :: Django",
     "Intended Audience :: Developers",
