--- a/.github/workflows/coverage_comment.yml
+++ b/.github/workflows/coverage_comment.yml
@@ -15,7 +15,8 @@ jobs:
     if: >
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success' &&
-      github.repository == 'django/django'
+      github.repository == 'django/django' &&
+      github.event.workflow_run.pull_requests[0] != null
     name: Post Coverage Comment
     runs-on: ubuntu-latest
     timeout-minutes: 60
@@ -42,6 +43,10 @@ jobs:
             const commentBody = '### 📊 Coverage Report for Changed Files\n\n```\n' + body + '\n```\n\n**Note:** Missing lines are warnings only. Some lines may not be covered by SQLite tests as they are database-specific.\n\nFor more information about code coverage on pull requests, see the [contributing documentation](https://docs.djangoproject.com/en/dev/internals/contributing/writing-code/unit-tests/#code-coverage-on-pull-requests).';
 
             const prNumber = parseInt(process.env.PR_NUMBER);
+            if (isNaN(prNumber)) {
+              core.setFailed('PR number is not available or invalid.');
+              return;
+            }
             
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
