fix: remove redundant null check from coverage comment workflow

--- a/.github/workflows/coverage_comment.yml
+++ b/.github/workflows/coverage_comment.yml
@@ -15,8 +15,7 @@ jobs:
     if: >
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success' &&
-      github.repository == 'django/django' &&
-      github.event.workflow_run.pull_requests[0] != null
+      github.repository == 'django/django'
     name: Post Coverage Comment
     runs-on: ubuntu-latest
     timeout-minutes: 60
