Added prepare-commit-msg hook to check commit prefixes.
I confess to running `git cherry-pick` accidentally a few times instead
of the backport script, resulting in missing branch prefixes.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,10 @@ repos:
     rev: v1.16.3 
     hooks:
     - id: zizmor
+  - repo: local
+    hooks:
+    - id: check-commit-prefix
+      stages: [prepare-commit-msg]
+      name: Check commit prefix
+      entry: scripts/check_commit_prefix.py
+      language: python
