--- a/.github/workflows/coverage_tests.yml
+++ b/.github/workflows/coverage_tests.yml
@@ -28,16 +28,33 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v6
+        id: setup_python
         with:
           python-version: '3.14'
-          cache: 'pip'
-          cache-dependency-path: 'tests/requirements/py3.txt'
+
+      - name: Restore cached virtualenv
+        uses: actions/cache/restore@v4
+        with:
+          key: venv-coverage-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('tests/requirements/py3.txt') }}
+          path: .venv
 
       - name: Install dependencies
         run: |
+          if (-not (Test-Path .venv)) {
+            python -m venv .venv
+          }
+          . .venv\Scripts\Activate.ps1
           python -m pip install --upgrade pip wheel
           python -m pip install -r tests/requirements/py3.txt -e .
           python -m pip install 'coverage[toml]' diff-cover
+          "$PWD\.venv\Scripts" | Out-File -FilePath $env:GITHUB_PATH -Append
+          "VIRTUAL_ENV=$PWD\.venv" | Out-File -FilePath $env:GITHUB_ENV -Append
+
+      - name: Save cached virtualenv
+        uses: actions/cache/save@v4
+        with:
+          key: venv-coverage-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('tests/requirements/py3.txt') }}
+          path: .venv
 
       - name: Run tests with coverage
         env:
