--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,11 +31,28 @@ jobs:
           persist-credentials: false
       - name: Set up Python
         uses: actions/setup-python@v6
+        id: setup_python
         with:
           python-version: '3.14'
-          cache: 'pip'
-          cache-dependency-path: 'docs/requirements.txt'
-      - run: python -m pip install -r docs/requirements.txt
+      - name: Restore cached virtualenv
+        uses: actions/cache/restore@v4
+        with:
+          key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('docs/requirements.txt') }}
+          path: .venv
+      - name: Install dependencies
+        run: |
+          if [ ! -d .venv ]; then
+            python -m venv .venv
+          fi
+          source .venv/bin/activate
+          python -m pip install -r docs/requirements.txt
+          echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
+          echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
+      - name: Save cached virtualenv
+        uses: actions/cache/save@v4
+        with:
+          key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('docs/requirements.txt') }}
+          path: .venv
       - name: Build docs
         run: |
           cd docs
