--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,20 +35,22 @@ jobs:
         with:
           python-version: '3.14'
       - name: Restore cached virtualenv
+        id: cache-venv
         uses: actions/cache/restore@v4
         with:
           key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('docs/requirements.txt') }}
           path: .venv
+      - name: Create virtualenv
+        if: steps.cache-venv.outputs.cache-hit != 'true'
+        run: python -m venv .venv
       - name: Install dependencies
         run: |
-          if [ ! -d .venv ]; then
-            python -m venv .venv
-          fi
           source .venv/bin/activate
           python -m pip install -r docs/requirements.txt
           echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
           echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
       - name: Save cached virtualenv
+        if: steps.cache-venv.outputs.cache-hit != 'true'
         uses: actions/cache/save@v4
         with:
           key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('docs/requirements.txt') }}
