Enable UP rules with no existing violations

--- a/ruff.toml
+++ b/ruff.toml
@@ -8,4 +8,50 @@ force-exclude = true
 
 [lint]
 preview = true
-select = []
+select = [
+    "UP001",  # useless-metaclass-type
+    "UP003",  # type-of-primitive
+#   "UP004",  # useless-object-inheritance
+    "UP005",  # deprecated-unittest-alias
+#   "UP006",  # non-pep585-annotation
+    "UP007",  # non-pep604-annotation-union
+#   "UP008",  # super-call-with-parameters
+    "UP009",  # utf8-encoding-declaration
+    "UP010",  # unnecessary-future-import
+    "UP011",  # lru-cache-without-parameters
+#   "UP012",  # unnecessary-encode-utf8
+    "UP013",  # convert-typed-dict-functional-to-class
+    "UP014",  # convert-named-tuple-functional-to-class
+    "UP015",  # redundant-open-modes
+#   "UP017",  # datetime-timezone-utc
+#   "UP018",  # native-literals
+    "UP019",  # typing-text-str-alias
+    "UP020",  # open-alias
+    "UP021",  # replace-universal-newlines
+    "UP022",  # replace-stdout-stderr
+    "UP023",  # deprecated-c-element-tree
+    "UP024",  # os-error-alias
+    "UP025",  # unicode-kind-prefix
+    "UP026",  # deprecated-mock-import
+    "UP028",  # yield-in-for-loop
+    "UP029",  # unnecessary-builtin-import
+    "UP030",  # format-literals
+#   "UP031",  # printf-string-formatting
+#   "UP032",  # f-string
+    "UP033",  # lru-cache-with-maxsize-none
+#   "UP034",  # extraneous-parentheses
+#   "UP035",  # deprecated-import
+    "UP036",  # outdated-version-block
+    "UP037",  # quoted-annotation
+    "UP039",  # unnecessary-class-parentheses
+    "UP040",  # non-pep695-type-alias
+    "UP041",  # timeout-error-alias
+#   "UP042",  # replace-str-enum (preview)
+    "UP043",  # unnecessary-default-type-args
+    "UP044",  # non-pep646-unpack
+#   "UP045",  # non-pep604-annotation-optional
+#   "UP046",  # non-pep695-generic-class
+    "UP047",  # non-pep695-generic-function
+    "UP049",  # private-type-parameter
+    "UP050",  # useless-class-metaclass-type
+]
