--- a/ruff.toml
+++ b/ruff.toml
@@ -13,7 +13,7 @@ select = [
     "UP003",  # type-of-primitive
     "UP004",  # useless-object-inheritance
     "UP005",  # deprecated-unittest-alias
-#   "UP006",  # non-pep585-annotation
+    "UP006",  # non-pep585-annotation
     "UP007",  # non-pep604-annotation-union
 #   "UP008",  # super-call-with-parameters
     "UP009",  # utf8-encoding-declaration
